# dev-Next-Gen-NOS-OFS-Skill-Assessment

./: Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
conf/: ofs_dps.conf.example
ofs_extents/: loofs2.dbf  loofs2.sbn  loofs2.sbx  loofs2.shp  loofs2.shp.xml  loofs2.shx
src/ofs_skill/model_processing/: do_horizon_skill_utils.py  get_datum_offset.py  get_node_ofs.py  indexing.py  intake_scisa.py  list_of_files.py  model_source.py  write_ofs_ctlfile.py
src/ofs_skill/obs_retrieval/: find_ofs_ice_stations.py  get_station_observations.py  inventory_chs_station.py  ofs_inventory_stations.py  retrieve_chs_station.py  write_obs_ctlfile.py
src/ofs_skill/skill_assessment/: __init__.py  get_skill.py  make_skill_maps.py  metrics_paired_one_d.py  metrics_two_d.py  nos_metrics.py
src/ofs_skill/visualization/: create_gui.py  make_ice_map.py  plotting_functions.py  plotting_scalar.py  plotting_vector.py
tests/: ice_nos_metrics_test.py  nos_metrics_test.py  test_package_imports.py  test_s3_fallback.py  test_station_distance.py  test_usgs_retrieval.py
