[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofs-skill"
dynamic = ["version"]
description = "Next-Gen NOS OFS Skill Assessment and Processing Software"
authors = [
    {name = "NOAA CO-OPS", email = "co-ops.userservices@noaa.gov"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Public Domain"}
keywords = ["oceanography", "forecasting", "skill-assessment", "NOAA", "OFS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "xarray>=0.19.0",
    "dask>=2024.5.1",
    "netCDF4>=1.5.7",
    "h5netcdf>=1.0.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "scikit-learn>=0.24.0",
    "geopandas>=0.9.0",
    "shapely>=1.7.0",
    "requests>=2.26.0",
    "boto3>=1.34.0",
    "s3fs>=2021.0.0",
    "searvey @ git+https://github.com/oceanmodeling/searvey.git@USGS_api_updates",
    "pyshp>=2.1.0",
    "intake>=0.6.4",
    "intake-xarray>=0.5.0",
    "intake-esm>=2021.8.17",
    "kaleido>=0.2.1",
    "seaborn>=0.11.0",
    "tkcalendar>=1.6.0",
    "coastalmodeling-vdatum @ git+https://github.com/oceanmodeling/coastalmodeling-vdatum.git",
    "cartopy>=0.23.0",
    "regionmask>=0.12.1",
    "global-land-mask>=1.0.0",
]

[project.optional-dependencies]
spatial = [
    "pyinterp>=2024.11.0",
]
all = [
    "pyinterp>=2024.11.0",
]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "ipython>=7.26.0",
    "pyinterp>=2024.11.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
create-1dplot = "bin.visualization.create_1dplot:main"
create-2dplot = "bin.visualization.create_2dplot:main"

[project.urls]
Homepage = "https://github.com/NOAA-CO-OPS/NOS_Shared_Cyberinfrastructure_and_Skill_Assessment"
Documentation = "https://github.com/NOAA-CO-OPS/NOS_Shared_Cyberinfrastructure_and_Skill_Assessment#readme"
Repository = "https://github.com/NOAA-CO-OPS/NOS_Shared_Cyberinfrastructure_and_Skill_Assessment.git"
"Bug Tracker" = "https://github.com/NOAA-CO-OPS/NOS_Shared_Cyberinfrastructure_and_Skill_Assessment/issues"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["ofs_skill*", "bin*"]

[tool.setuptools.package-data]
"ofs_skill" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "ofs_skill.__version__"}

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--verbose --cov=src/ofs_skill --cov-report=html --cov-report=term-missing"
markers = [
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]
